History
=======

Version 0.8.6 - Unreleased
--------------------------

- Exclude all markup with class ``newsletterExclude`` when sending out
  mail.  This allows for a lo-fi way of marking parts of your template
  for exclusion if you can't be bothered to write your own
  ``IFormatItem``.

Version 0.8.5 - 2009-01-05
--------------------------

- Extended the CVS input of subscribers to allow arbitrary CVS fields
  to be stored as part of the subscriptions, and then included in the
  composer output using the ``${composervariableFIELDNAME1}``
  syntax. [russf]

Version 0.8.4 - 2009-01-02
--------------------------

- Added some sensible defaults to
  ``collective.dancing.composer.plone_html_strip`` so that key html is
  filtered out. [pigeonflight]

- Add experimental support for zexp. [nouri]

- Added upgradestep to migrate existing MessageQueues to
  collective.singing.queue.CompositeQueue.
  This fixes slow iteration over large queues and
  extremely slow rendering of the staticstics page.
  [tmog]

Version 0.8.3 - 2008-12-03
--------------------------

- Fix issue with unicodeerrors on statistics page because of bad Job-messages. 
  Described in https://bugs.launchpad.net/singing-dancing/+bug/299950
  [tmog]

- Part of Czech translation.  
  [naro]

- Improved block structure and added classes and ids. Replaced paras with divs. 
  These changes will impact existing CSS.  [russf]

- Use of ``Template().substitute`` will be fatal on any un-escaped where $ will 
  occur - like on all recent news items :( safe_substitute behaves properly in 
  these cirumstances.  [russf]

- Some refactoring in order to allow for more customized subscription forms.
  [nouri]

- Added french translation.

- Made new job-view ``browser/jobs.pt`` translateable, rebuilt pot file and 
  updated german translation.  [saily]

Version 0.8.2 - 2008-11-17
--------------------------

- Fixed a bug in ``HTMLComposer`` where unsubscribe_url could not be substituted