@@ -8,6 +8,10 @@ Version 0.8.6 - Unreleased
   mail.  This allows for a lo-fi way of marking parts of your template
   for exclusion if you can't be bothered to write your own
   ``IFormatItem``.
+  
+- Added sort_criteria dict to the collector module. It allows to specify
+  different query based on the current cue for different sort criteria.
+  [naro]
 
 Version 0.8.5 - 2009-01-05
 --------------------------
